# prompt-regression-lab

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample-suite.json  sample-suite.yaml
src/prompt_regression_lab/: __init__.py  assertions.py  cli.py  errors.py  loader.py  render.py  report.py  runner.py
tests/: test_assertions.py  test_cli.py  test_loader.py  test_render.py  test_runner_report.py
